beginning wait_for

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <title>MTG Card Table</title>
 <script src="mithril.min.js"></script>
+<script src="http_wrapper.js"></script>
 <script src="index.js"></script>
