--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,3 @@
 <!doctype html>
 <title>MTG Card Table</title>
-<script src="mithril.min.js"></script>
-<script src="http_wrapper.js"></script>
-<script src="index.js"></script>
+<script src="bundle.js"></script>
